# saved_trajectories

./: CMakeLists.txt  Wave  install.sh  package.xml  poubelle_app  poubelle_depose  poubelle_eloigne  poubelle_init  poubelle_transport  repos  transport  zeros2
saved_trajectories/: poubelle_eloigne  poubelle_init  poubelle_valide  pre_grip_pose  receive_bag
